# slidy-scrambler

./: .gitignore  Cargo.toml  build.sh
.cargo/: config.toml
src/: lib.rs
static/: index.html  style.css
