[package]
name = "slidy-scrambler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "^0.1", optional = true }
log = "^0.4"
wasm-bindgen = "^0.2"
wasm-logger = "^0.2"

[profile.release]
opt-level = "s"
