[package]
name = "slidy-scrambler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "^0.1", optional = true }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
itertools = "0.14.0"
log = "^0.4"
slidy = "^0.2"
wasm-bindgen = "^0.2"
wasm-logger = "^0.2"
web-sys = { version = "^0.3", features = ["Document", "HtmlElement", "Window"] }

[profile.release]
opt-level = "s"
